--- a/README
+++ b/README
@@ -9,7 +9,7 @@ An implementation of the kiss package manager in Lua.
 [ ] checksum
 [ ] download
 [ ] install
-[ ] list
+[x] list
 [ ] remove
 [x] search
 [ ] update
