--- a/README
+++ b/README
@@ -31,3 +31,7 @@ Dependencies
 
 lua-posix library (https://github.com/luaposix/luaposix)
 BLAKE3 C library (https://git.sr.ht/~mcf/b3sum)
+
+Rationale: plain Lua lacks UNIX-specific bindings which we need (working with
+files and paths) so either I would write a set of Lua bindings to C, but it's as
+simple to use an existing set such as lua-posix.
