note targets Lua 5.4

--- a/README
+++ b/README
@@ -29,6 +29,7 @@ Lua ...
 Dependencies
 ------------
 
+Lua 5.4
 lua-posix library (https://github.com/luaposix/luaposix)
 BLAKE3 C library (https://git.sr.ht/~mcf/b3sum) (built with -fPIC)
 
